// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bokmål render 1`] = `
<div>
  <div
    class="_atlasTopBanner_a3e095"
  >
    <div
      class="_bannerWrapper_a3e095"
    >
      <nav
        aria-label="breadcrumb"
        class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
      >
        <ol
          class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
        >
          <li
            class="MuiBreadcrumbs-li"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-r3y2q9-MuiTypography-root-MuiLink-root"
              href="/helseatlas/"
            >
              Forside
            </a>
          </li>
          <li
            aria-hidden="true"
            class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              color="#D3D7DA"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </li>
          <li
            class="MuiBreadcrumbs-li"
          >
            <div
              class="_breadcrumb_text_a3e095"
            >
              Dette er en tittel
            </div>
          </li>
        </ol>
      </nav>
      <div
        class="_rightbanner_a3e095"
      />
    </div>
  </div>
</div>
`;

exports[`English render 1`] = `
<div>
  <div
    class="_atlasTopBanner_a3e095"
  >
    <div
      class="_bannerWrapper_a3e095"
    >
      <nav
        aria-label="breadcrumb"
        class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
      >
        <ol
          class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
        >
          <li
            class="MuiBreadcrumbs-li"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-r3y2q9-MuiTypography-root-MuiLink-root"
              href="/helseatlas/en/"
            >
              Front page
            </a>
          </li>
          <li
            aria-hidden="true"
            class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              color="#D3D7DA"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </li>
          <li
            class="MuiBreadcrumbs-li"
          >
            <div
              class="_breadcrumb_text_a3e095"
            >
              This is a title
            </div>
          </li>
        </ol>
      </nav>
      <div
        class="_rightbanner_a3e095"
      />
    </div>
  </div>
</div>
`;

exports[`IA english render 1`] = `
<div>
  <div
    class="_atlasTopBanner_a3e095"
  >
    <div
      class="_bannerWrapper_a3e095"
    >
      <nav
        aria-label="breadcrumb"
        class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
      >
        <ol
          class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
        >
          <li
            class="MuiBreadcrumbs-li"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-r3y2q9-MuiTypography-root-MuiLink-root"
              href="/helseatlas/en/"
            >
              Front page
            </a>
          </li>
          <li
            aria-hidden="true"
            class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              color="#D3D7DA"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </li>
          <li
            class="MuiBreadcrumbs-li"
          >
            <div
              class="_breadcrumb_text_a3e095"
            >
              Dette er en tittel
            </div>
          </li>
        </ol>
      </nav>
      <div
        class="_rightbanner_a3e095"
      >
        <div
          class="_map_button_a3e095"
        >
          <a
            href="ia"
          >
            Map
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`IA render 1`] = `
<div>
  <div
    class="_atlasTopBanner_a3e095"
  >
    <div
      class="_bannerWrapper_a3e095"
    >
      <nav
        aria-label="breadcrumb"
        class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
      >
        <ol
          class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
        >
          <li
            class="MuiBreadcrumbs-li"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-r3y2q9-MuiTypography-root-MuiLink-root"
              href="/helseatlas/"
            >
              Forside
            </a>
          </li>
          <li
            aria-hidden="true"
            class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              color="#D3D7DA"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </li>
          <li
            class="MuiBreadcrumbs-li"
          >
            <div
              class="_breadcrumb_text_a3e095"
            >
              Dette er en tittel
            </div>
          </li>
        </ol>
      </nav>
      <div
        class="_rightbanner_a3e095"
      >
        <div
          class="_map_button_a3e095"
        >
          <a
            href="ia"
          >
            Kart
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Nynorsk render 1`] = `
<div>
  <div
    class="_atlasTopBanner_a3e095"
  >
    <div
      class="_bannerWrapper_a3e095"
    >
      <nav
        aria-label="breadcrumb"
        class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
      >
        <ol
          class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
        >
          <li
            class="MuiBreadcrumbs-li"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-r3y2q9-MuiTypography-root-MuiLink-root"
              href="/helseatlas/"
            >
              Forside
            </a>
          </li>
          <li
            aria-hidden="true"
            class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              color="#D3D7DA"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </li>
          <li
            class="MuiBreadcrumbs-li"
          >
            <div
              class="_breadcrumb_text_a3e095"
            >
              Dette er ein tittel
            </div>
          </li>
        </ol>
      </nav>
      <div
        class="_rightbanner_a3e095"
      />
    </div>
  </div>
</div>
`;

exports[`Random lang render 1`] = `
<div>
  <div
    class="_atlasTopBanner_a3e095"
  >
    <div
      class="_bannerWrapper_a3e095"
    >
      <nav
        aria-label="breadcrumb"
        class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
      >
        <ol
          class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
        >
          <li
            class="MuiBreadcrumbs-li"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-r3y2q9-MuiTypography-root-MuiLink-root"
              href="/helseatlas/"
            >
              Forside
            </a>
          </li>
          <li
            aria-hidden="true"
            class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              color="#D3D7DA"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </li>
          <li
            class="MuiBreadcrumbs-li"
          >
            <div
              class="_breadcrumb_text_a3e095"
            >
              Dette er ein tittel
            </div>
          </li>
        </ol>
      </nav>
      <div
        class="_rightbanner_a3e095"
      />
    </div>
  </div>
</div>
`;
